Fix the sidebar collaps

--- a/src/components/layout/Sidebar/Sidebar.scss
+++ b/src/components/layout/Sidebar/Sidebar.scss
@@ -1,10 +1,11 @@
 .sidebar {
     background-color: #143757;
-    width: 240px;
+    //width: 240px;
     padding: 1.5rem 1rem;
     display: flex;
     transition: width 0.3s ease, padding 0.3s ease;
-    overflow: hidden;
+    //overflow: hidden;
+    // background-color: red;
 
     ul {
         list-style: none;
@@ -12,6 +13,7 @@
         flex-direction: column;
         gap: 0.5rem;
         width: 100%;
+        //background-color: red;
     }
 
     li {
@@ -61,7 +63,7 @@
 
     /* COLLAPSED STATE */
     &.collapsed {
-        width: 64px;
+        //width: 64px;
         padding: 1.5rem 0.5rem;
 
         a {
